--- a/src/main/resources/template/default/css/item.css
+++ b/src/main/resources/template/default/css/item.css
@@ -18,8 +18,9 @@
 }
 
 .fx-main {
-    position: fixed;
+    position: relative;
     left: 300px;
+    right: -300px;
 }
 
 .describe {
@@ -44,26 +45,15 @@
 }
 
 
-/*   main   */
-.card-title {
+.article-title {
     font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
     font-size: 20px;
     color: black;
 }
 
-.card-author {
+.article-author {
     font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
     font-size: 12px;
     color: #999;
     padding-top: 10px;
-}
-
-.card-body {
-    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
-    font-size: 16px;
-    padding-top: 5px;
-}
-
-.card-tags {
-    padding-top: 15px;
 }
